tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_8__contextual_unification_8.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo: {
  f: { x: Int } -> Int
} = {
  f = -> options [ options .y ]
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_8/contextual_unification_8.kk:4:29
  │
4 │   f = -> options [ options .y ]
  │                             ^ Unknown variable `y`
  │
  = Cannot find this value symbol in the current scope
